# notifico

./: .dockerignore  .gitignore  Dockerfile  LICENCE  MANIFEST.in  Procfile  README.md  alembic.ini  debug_frontend.py  docker-compose.yaml  docker-compose.yml  fabfile.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: deploy.yml  tests.yml
alembic/: env.py
alembic/versions/: 35460903d8bf_testing_123.py
botifico/: __init__.py  __main__.py  bot.py  default_config.py
frontend/: README.md  __init__.py  default_config.py  models.py
frontend/bots/: __init__.py  __main__.py  bot.py
frontend/public/: __init__.py
frontend/public/templates/: landing.html  login.html  register.html
frontend/services/: __init__.py  github.py  service.py
frontend/static/css/: bootstrap.css  custom.css
frontend/templates/: fake.html  forms.html
frontend/templates/base/: body.html  footer.html  header.html
frontend/views/account/: __init__.py
migrations/: env.py
migrations/versions/: 0f6a0baca7b1_remove_token.py  1b901dcc660f_.py  2622cc62927e_add_network_ordering.py  2d30f08757d6_.py  2e379154b800_.py  39bbc57ae19d_add_owners_to_networks.py  4250727b1899_.py  75770b11c67a_.py  a24f38bb188b_.py  a50852b553b1_.py  b4a63bed6b7f_.py  cad59c3d601a_.py  d19e3d2edab2_initial_migration.py  ddb15516c745_.py  ebe78b1ff4dc_.py
misc/: bitbucket_git.json  docker_config.py  full_github.json  full_github_branch.json  full_github_tag.json  github.json  github_branch.json  github_tag.json  hook_json.sh  hook_payload.sh  jira_issue_created.json  jira_issue_updated.json  test_cia.py  test_github_hook.json
misc/deploy/: run_bots.sh  supervisord.conf
notifico/: __init__.py  __main__.py  app.py  authorization.py  cli.py  config.py  converters.py  database.py  default_config.py  errors.py  extensions.py  logger.py  models.py  permissions.py  plugin.py  provider.py  service.py  settings.py  target.py  version.py  worker.py
notifico/botifico/: README.md  bot.py  errors.py  events.py  logger.py  manager.py  parsing.py  plugin.py
notifico/bots/: __init__.py  __main__.py  bot.py  manager.py  plugins.py  util.py
notifico/contrib/: README.md
notifico/forms/: admin.py  projects.py  users.py
notifico/models/: __init__.py  bot.py  channel.py  chat.py  group.py  hook.py  log.py  plugin.py  project.py  provider.py  source.py  target.py  token.py  user.py  utils.py
notifico/plugins/: __init__.py  channel.py  core.py  plain.py  source.py
notifico/providers/: github.py  mediawiki.py  plain.py
notifico/scripts/: debug.py
notifico/services/: __init__.py  background.py  github.py  hook.py  irc_bot.py  messages.py  plain.py  reset.py  service.py  stats.py
notifico/sources/: README.md  github.py  mediawiki.py  plain.py
notifico/tasks/: __init__.py  mail.py  webhooks.py
notifico/templates/: body.html  confirm.html  forms.html  no_sidebar.html  page.html  panel.html  sidebar.html
notifico/util/: colorhash.py  irc.py  pretty.py
notifico/views/: account.py  account_forms.py  admin.py  chat.py  errors.py  projects.py  public.py  settings.py  users.py  utils.py  webhooks.py
tests/botifico/: test_manager.py
tests/hooks/: test_github.py
tests/irc/: test_colors.py
utopia/: .gitignore  __main__.py  errors.py
utopia/client/: __init__.py  core.py  user.py
utopia/plugins/: __init__.py  plugin.py
utopia/protocol/: __init__.py  messages.py
(+189 files in other folders)
