[tool.poetry]
name = "notifico"
version = "2.0.0"
description = "A service-to-IRC relay."
authors = ["Tyler Kennedy <tk@tkte.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-WTF = "^1.0.1"
Flask-Gravatar = "^0.5.0"
Flask-XML-RPC = "^0.1.2"
Flask-Mail = "^0.9.1"
Flask-Caching = "^1.10.1"
SQLAlchemy = "^1.4.36"
redis = "^4.3.4"
gunicorn = "^20.1.0"
Unidecode = "^1.3.4"
raven = "^6.10.0"
blinker = "^1.4"
docopt = "^0.6.2"
celery = "^5.2.6"
click = "^8.1.3"
requests = "^2.31.0"
email-validator = "^1.2.1"
Flask-Migrate = "^3.1.0"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
rich = "^12.5.1"
gevent = "^21.12.0"
pytest = { version = "^7.1.3", optional = true }
sentry-sdk = "^1.9.9"
Flask-RESTful = "^0.3.9"
Flask-Babel = "^2.0.0"

[tool.poetry.extras]
tests = ["pytest"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^23.3.0"

[tool.poetry.scripts]
notifico = "notifico.cli:cli"

[tool.poetry.plugins."notifico.plugins.incoming"]
"appveyor" = "notifico.contrib.services.appveyor:AppVeyorHook"
"github" = "notifico.contrib.services.github:GithubHook"
"gitlab" = "notifico.contrib.services.gitlab:GitlabHook"
"jenkins" = "notifico.contrib.services.jenkins:JenkinsHook"
"jira" = "notifico.contrib.services.jira:JIRAHook"
"plain" = "notifico.contrib.services.plain:PlainTextHook"
"travisci" = "notifico.contrib.services.travisci:TravisHook"
"gitea" = "notifico.contrib.services.gitea:GiteaHook"

[tool.poetry.plugins."notifico.plugins.outgoing"]
"discord" = "notifico.contrib.services.discord:DiscordHook"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']
extend-exclude = '''
(
    \.venv/
    |\.local/
    |\.cache/
    |\.git/
    |.+/migrations
)
'''
